plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}-${project.mod_loader}-${project.minecraft_version}"
}

repositories {

	maven {
		url "https://cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}

	maven { url "https://api.modrinth.com/maven" }

	maven {
		url "https://maven.siphalor.de/"
	}

	maven {
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
	}

	//maven { url = "https://jitpack.io" }
	maven { url "https://maven.shedaniel.me/" }

	maven { url 'https://maven.nucleoid.xyz' }
	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
	maven { url 'https://api.modrinth.com/maven' }

	maven {
		name 'Gegy'
		url 'https://maven.gegy.dev'
	}

	maven { url 'https://api.modrinth.com/maven' }
	maven { url 'https://maven.wispforest.io/releases' }
	maven { url 'https://maven.su5ed.dev/releases' }

	maven {
		name = 'ParchmentMC'
		url = 'https://maven.parchmentmc.org'
	}

	/*maven { url = "https://www.cursemaven.com" }
	maven { url = "https://maven.shedaniel.me/" }
	maven { url = "https://maven.terraformersmc.com/" }
	maven { url = "https://maven.wispforest.io/" }
	maven { url = "https://jitpack.io" }
	maven { url = "https://maven.ladysnake.org/releases" }
	maven { url = "https://maven.cafeteria.dev" }
	maven { url = "https://maven.jamieswhiteshirt.com/libs-release" }
	maven { url = "https://api.modrinth.com/maven/" }
	maven { url = "https://maven.nucleoid.xyz/" } */
}

loom {
	accessWidenerPath = file("src/main/resources/travelersbackpack.accesswidener")
}

fabricApi {
	configureDataGeneration()
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.layered() {
		officialMojangMappings()
		parchment("org.parchmentmc.data:parchment-1.21:2024.11.10@zip")
	}
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	//REQUIRED

	//Cardinal Components
	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"

	//Cloth Config
	modCompileOnly("dev.architectury:architectury-fabric:${project.architectury_version}")
	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"

	//OPTIONAL

	//Crafting Tweaks
	modCompileOnly "curse.maven:balm-fabric-500525:5442090"
	modCompileOnly "curse.maven:crafting-tweaks-fabric-502516:5426914"

	//ModMenu
	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"

	//Trinkets
	modCompileOnly("dev.emi:trinkets:${trinkets_version}")

	//Accessories
	modImplementation("io.wispforest:accessories-fabric:${project.accessories_version}")

	//REI
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"

	//JEI
	modImplementation ("maven.modrinth:jei:heV8vLrF")

	//Comforts
	modCompileOnly ("maven.modrinth:comforts:vUdakIzK")

	//EMI
	modCompileOnly "dev.emi:emi-fabric:${project.emi_version}:api"

	//Universal Graves
	modCompileOnly "curse.maven:universal-graves-497175:5435263"

	//Mouse Tweaks
	modImplementation "curse.maven:mouse-tweaks-60089:5437294"

	//TAN
	modCompileOnly("curse.maven:tan-246391:5715303")
	modCompileOnly("curse.maven:glitchcore-955399:5483774")

	modImplementation("maven.modrinth:lithium:5szYtenV")

	//modRuntimeOnly("net.fabricmc:fabric-language-kotlin:1.11.0+kotlin.2.0.0")
	//modRuntimeOnly("maven.modrinth:expanded-armor-enchanting:FsoLIMq8")

	//Carry On
	//modRuntimeOnly "curse.maven:carryon-274259:5141763"

	//modRuntimeOnly("eu.pb4:sgui:1.2.2+1.20")
	//modRuntimeOnly("eu.pb4:placeholder-api:2.1.1+1.20")
	//modRuntimeOnly('xyz.nucleoid:server-translations-api:2.0.0+1.20')
	//modRuntimeOnly('eu.pb4:polymer-core:0.5.3+1.20.1')
	//modRuntimeOnly('eu.pb4:polymer-resource-pack:0.5.3+1.20.1')
	//modRuntimeOnly('eu.pb4:polymer-virtual-entity:0.5.3+1.20.1')
	//modRuntimeOnly('eu.pb4:predicate-api:0.1.2+1.20')
	//modRuntimeOnly("eu.pb4:common-protection-api:1.0.0")
	//modRuntimeOnly("me.lucko:fabric-permissions-api:0.2-SNAPSHOT")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}